--- a/front/src/pages/landingPage/LandingPage.scss
+++ b/front/src/pages/landingPage/LandingPage.scss
@@ -1,69 +1,74 @@
-.landing{
-    display: flex;
-    flex-direction: column;   
-}
-
 body{
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: linear-gradient(0deg, rgba(29, 45, 68, 0.8), rgba(29, 45, 68, 0.8)), url('../../../data/city.jpg');
+    background-image: linear-gradient(0deg, rgba(29, 45, 68, 0.8), rgba(29, 45, 68, 0.8)), url('./../../data/city.jpg');
     
 }
 
-.title{
-    position: relative;
-    top: 6.25rem;
-
-    font-family: 'Bubblegum Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 7.4375rem;
-    line-height: 9.625rem;
-    /* identical to box height, or 129% */
-
-    letter-spacing: -0.015em;
-    margin-top: 0;
-    margin-bottom: 0;
-    color: #ffffff;
-}
-
-.buttons{
-    position: relative;
-    top: 25rem;
-
+.landing{
     display: flex;
-    justify-content: space-around;
-    padding-left: 20%;
-    padding-right: 20%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-}
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw; 
 
-.button-style{
-    width: 8.375rem;
-    height: 3.125rem;
-    background: #DDE0E3;
-    box-shadow: 0px 4px 5px rgba(255, 255, 255, 0.3);
-    border-radius: .8125rem;
-    color: #1D2D44;
-}
+    &-title{
+        position: relative;
+        top: 10vh;
+        height: 70vh;
+    
+        font-family: 'Bubblegum Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 7.4375rem;
+        line-height: 9.625rem;
+        /* identical to box height, or 129% */
+    
+        letter-spacing: -0.015em;
+        margin-top: 0;
+        margin-bottom: 0;
+        color: #ffffff;
+    }
 
-.button-style:hover{
-    background: #121A2B;
-    color: #ffffff !important;
-}
+    &-buttons{
+        position: relative;
+        height: 25vh;
+    
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 0%;
 
-.button-text{
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 800;
-    font-size: 1rem;
-    line-height: 1.4375rem;
-    /* identical to box height, or 142% */
+        &-style{
+            width: 10vw;
+            min-width: fit-content;
+            height: 3.125rem;
 
-    text-align: center;
-    letter-spacing: .0781rem;
-    text-transform: uppercase;
+            background: #DDE0E3;
+            box-shadow: 0px 4px 5px rgba(255, 255, 255, 0.3);
+            border-radius: .8125rem;
+            color: #1D2D44;
+
+            cursor: pointer;
+
+            &-text{
+                font-family: 'Lato';
+                font-style: normal;
+                font-weight: 800;
+                font-size: 1rem;
+                line-height: 1.4375rem;
+                /* identical to box height, or 142% */
+            
+                text-align: center;
+                letter-spacing: .0781rem;
+                text-transform: uppercase;
+            }
+        }
+
+        &-style:hover{
+            background: #121A2B;
+            color: #ffffff !important;
+        }
+    }
 }
