--- a/front/src/pages/landingPage/LandingPage.scss
+++ b/front/src/pages/landingPage/LandingPage.scss
@@ -4,7 +4,7 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-image: linear-gradient(0deg, rgba(29, 45, 68, 0.8), rgba(29, 45, 68, 0.8)), url('./../../data/city.jpg');
-    
+    text-align: center;
 }
 
 .landing{
