--- a/front/src/pages/noPage/NoPage.scss
+++ b/front/src/pages/noPage/NoPage.scss
@@ -2,8 +2,9 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
 
     color: white;
     
@@ -11,5 +12,41 @@
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
-    line-height: 39px;
+
+    &-1 {
+        img{
+            width: 40vw;
+        }
+    }
+
+    &-2 {
+        width: 40vw;
+        min-width: fit-content;
+
+        &-button{
+            width: 10vw;
+            min-width: fit-content;
+            height: 3.125rem;
+
+            background: #DDE0E3;
+            box-shadow: 0px 4px 5px rgba(255, 255, 255, 0.3);
+            border-radius: .8125rem;
+            color: #1D2D44;
+
+            cursor: pointer;
+
+            &-text{
+                font-family: 'Lato';
+                font-style: normal;
+                font-weight: 800;
+                font-size: 1rem;
+                line-height: 1.4375rem;
+                /* identical to box height, or 142% */
+            
+                text-align: center;
+                letter-spacing: .0781rem;
+                text-transform: uppercase;
+            }
+        }
+    }
 }
