--- a/front/src/pages/crearViaje/CrearViaje.scss
+++ b/front/src/pages/crearViaje/CrearViaje.scss
@@ -3,27 +3,32 @@
     display: flex;
     justify-content: center;
 
-    background-color: white;
+    //background-color: rgba(255, 255, 255, 0.562);
   }
 
   &-form {
+    padding: 1rem;
+    border-radius: 2%;
     display: flex;
     flex-direction: column;
-    width: 30rem;
     gap: 1rem;
-    margin-bottom: 2rem;
+    width: 30rem;
+    margin: 1rem;
+    background-color: white;
   }
 }
 
 .form {
   &-group {
     display: flex;
-    justify-content: space-between;
     flex-direction: row;
+    align-items: flex-start;
+    align-content: flex-end;
   }
 
   &-label{
     font-weight: bold;
+    margin-right: 2rem;
   }
 }
   
