--- a/front/src/components/Detail/Detail.scss
+++ b/front/src/components/Detail/Detail.scss
@@ -96,8 +96,42 @@
         }
     }
 
-    &-Button{
+    &-Passengers{
+        &-Img{
+            width: 30px;
+            height: 30px;
+        }
 
+        &-Input{
+            font-family: 'Lato';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 26px;
+            /* identical to box height, or 162% */
+
+            text-align: center;
+
+            color: #42629E;
+        }
+    }
+
+    &-Cost{
+        &-Input{
+            font-family: 'Lato';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 39px;
+            /* identical to box height, or 194% */
+
+            text-align: center;
+
+            color: #000000;
+        }
+    }
+
+    &-Button{
         font-family: 'Lato';
         font-style: normal;
         font-weight: 800;
@@ -113,6 +147,7 @@
 
         width: auto;
         height: 50px;
+        padding-top: 10px;
 
         background: #FFC868;
         box-shadow: 0px 4px 5px rgba(255, 255, 255, 0.3);
