--- a/front/src/pages/logIn/LogIn.scss
+++ b/front/src/pages/logIn/LogIn.scss
@@ -2,31 +2,31 @@
     &-wheels{
         display: flex;
 
-        @media only screen and (max-width: 1440px) {
-            flex-direction: column;
-            align-items: center;
+        flex-direction: column;
+        align-items: center;
 
-            h1 {
-                margin-top: 0;
-                margin-bottom: 0;
+        h1 {
+            margin-top: 0;
+            margin-bottom: 0;
+    
+            font-family: 'Bubblegum Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 119px;
+            line-height: 154px;
+            letter-spacing: -0.015em;
         
-                font-family: 'Bubblegum Sans';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 119px;
-                line-height: 154px;
-                letter-spacing: -0.015em;
-            
-                color: #FFFFFF;
-            }
-        
-            img{
-                width: 15vw;
-                min-width: 10rem;
-                margin-bottom: 10vh;
-            }
+            color: #FFFFFF;
         }
-        @media only screen and (min-width: 1440px) {
+    
+        img{
+            height: 15vh;
+            min-width: 10rem;
+            max-height: 9rem;
+            margin-bottom: 10vh;
+        }
+
+        @media only screen and (min-width: 1024px) {
             flex-direction: row;
             align-items: center;
             position: absolute;
@@ -54,6 +54,7 @@
                 min-width: 5rem;
                 max-height: 9rem;
                 margin-left: 3vw;
+                margin-bottom: 0;
             }
         }
     }
