--- a/front/src/components/Search/Search.scss
+++ b/front/src/components/Search/Search.scss
@@ -35,7 +35,7 @@
     &-Header{
         font-family: 'Lato';
         font-style: normal;
-        font-weight: 400;
+        font-weight: 40px;
         font-size: 16px;
         line-height: 26px;
         /* identical to box height, or 162% */
