cambios search.scss

--- a/front/src/components/Search/Search.scss
+++ b/front/src/components/Search/Search.scss
@@ -28,11 +28,11 @@
         }
     }
 }
-.Locations {
-    background: #DDE0E3;
-    border-radius: 13px;
-    margin-bottom: 20px;
-    &-Header{
+.form {
+    &-control {
+        border-radius: 13px;
+        background-color: #DDE0E3;
+        
         font-family: 'Lato';
         font-style: normal;
         font-weight: 40px;
@@ -46,14 +46,23 @@
 
         width: 500px;
         height: auto;
-
-        
-        &-Arrow{
-            transform: rotate(180deg);
-        }
     }
-    &-Content{
+    &-option {
         border-radius: 13px;
-        background: #DDE0E3;
+        background-color: #DDE0E3;
+        
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 40px;
+        font-size: 16px;
+        line-height: 26px;
+        /* identical to box height, or 162% */
+
+        text-align: center;
+
+        color: #42629E;
+
+        width: 500px;
+        height: auto;
     }
 }
