--- a/front/src/pages/crearViaje/CrearViaje.scss
+++ b/front/src/pages/crearViaje/CrearViaje.scss
@@ -1,8 +1,7 @@
-.login {
+.crearViaje {
   &-container {
     display: flex;
     justify-content: center;
-
     //background-color: rgba(255, 255, 255, 0.562);
   }
 
