--- a/front/src/pages/landingPage/LandingPage.scss
+++ b/front/src/pages/landingPage/LandingPage.scss
@@ -29,6 +29,7 @@ body{
         margin-top: 0;
         margin-bottom: 0;
         color: #ffffff;
+        align-self: center;
     }
 
     &-buttons{
