--- a/front/src/pages/crearViaje/CrearViaje.scss
+++ b/front/src/pages/crearViaje/CrearViaje.scss
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    width: 30rem;
+    //width: 30rem;
     margin: 1rem;
     background-color: white;
   }
