--- a/front/src/pages/home/Home.scss
+++ b/front/src/pages/home/Home.scss
@@ -57,7 +57,7 @@
                 color: #ffffff;
             }
             &-Text:hover{    
-                color: rgb(85, 136, 211);
+                color: #1D2D44
             }
         }
     }
