--- a/front/src/components/Footer/Footer.scss
+++ b/front/src/components/Footer/Footer.scss
@@ -1,8 +1,6 @@
 .foot
 {
     background-color: #1D2D44;
-    border-style: solid;
-    border-top-color: whitesmoke;
 }
 
 .text {
@@ -11,4 +9,8 @@
 
 .titulo {
     color: whitesmoke;
+}
+
+.copyright{
+    padding-top: 0 !important;
 }
